tdf#90605 : FILESAVE:PPTX Line shape style was not exported

Problem description:
<p:style> tag of line shape are not exported.
It will export the line shape with no style.

Fixed for export of line shape style

Change-Id: I1ad8d8c3795f180964b551d7501465170e495c61